--- a/inference.ipynb
+++ b/inference.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-14T06:52:55.972115800Z",
-     "start_time": "2023-12-14T06:52:33.940328Z"
+     "end_time": "2023-12-15T05:56:04.803664900Z",
+     "start_time": "2023-12-15T05:55:50.445741900Z"
     }
    },
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -32,12 +32,20 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\felix\\Desktop\\Uni\\Master Finance and Information Management (FIM)\\WS 23_24\\Master's Thesis\\Elusive_Case_Transformer\\.venv\\lib\\site-packages\\pm4py\\util\\dt_parsing\\parser.py:77: UserWarning: ISO8601 strings are not fully supported with strpfromiso for Python versions below 3.11\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": "parsing log, completed traces ::   0%|          | 0/6 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "902fcaa1c45942099dadc1e649ee10e6"
+       "model_id": "3142fcc7e3194b698b1b968c2eff5418"
       }
      },
      "metadata": {},
@@ -55,7 +63,7 @@
      "data": {
       "text/plain": "<All keys matched successfully>"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,32 +84,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-14T03:32:10.432069300Z",
-     "start_time": "2023-12-14T03:32:09.069827300Z"
+     "end_time": "2023-12-15T05:57:56.201228100Z",
+     "start_time": "2023-12-15T05:57:52.268572800Z"
     }
    },
    "id": "d92be1715f7873ae"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "    SOURCE: decide decide reinitiate_request reject_request check_ticket pay_compensation pay_compensation examine_casually decide reinitiate_request\n",
-      "    TARGET: 4 5 5 4 5 3 6 5 5 5\n",
-      " PREDICTED: 5 5 5 3 6 5 5 5 5 5 5\n",
+      "    SOURCE: register_request decide decide reinitiate_request examine_thoroughly register_request register_request examine_casually examine_casually check_ticket\n",
+      "    TARGET: 5 3 1 3 3 6 4 6 5 4\n",
+      " PREDICTED: 1 2 1 5 3 1 3 1 3 1\n",
       "--------------------------------------------------------------------------------\n",
-      "    SOURCE: examine_casually check_ticket examine_thoroughly decide check_ticket register_request decide decide reinitiate_request examine_thoroughly\n",
-      "    TARGET: 3 3 1 2 1 5 3 1 3 3\n",
-      " PREDICTED: 1 2 3 3 3 3 3 1 5 3\n",
+      "    SOURCE: reinitiate_request reject_request check_ticket pay_compensation pay_compensation examine_casually decide reinitiate_request examine_casually check_ticket\n",
+      "    TARGET: 5 4 5 3 6 5 5 5 5 5\n",
+      " PREDICTED: 5 4 5 3 6 5 5 5 5 5\n",
       "--------------------------------------------------------------------------------\n",
-      "    SOURCE: check_ticket examine_thoroughly decide check_ticket register_request decide decide reinitiate_request examine_thoroughly register_request\n",
-      "    TARGET: 3 1 2 1 5 3 1 3 3 6\n",
-      " PREDICTED: 1 2 1 3 3 3 3 1 5 3 1\n"
+      "    SOURCE: check_ticket pay_compensation examine_thoroughly decide decide decide reinitiate_request reject_request check_ticket pay_compensation\n",
+      "    TARGET: 3 2 4 3 4 5 5 4 5 3\n",
+      " PREDICTED: 5 3 6 4 5 4 5 5 5\n"
      ]
     }
    ],
@@ -111,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-14T03:32:17.881213600Z",
-     "start_time": "2023-12-14T03:32:16.700899600Z"
+     "end_time": "2023-12-15T05:58:00.895726100Z",
+     "start_time": "2023-12-15T05:57:59.485462200Z"
     }
    },
    "id": "3f3db9332edca3bb"
