--- a/inference.ipynb
+++ b/inference.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-12-15T05:56:04.803664900Z",
-     "start_time": "2023-12-15T05:55:50.445741900Z"
-    }
+     "end_time": "2024-01-23T13:32:52.074298500Z",
+     "start_time": "2024-01-23T13:32:33.518515600Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -23,30 +23,50 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d92be1715f7873ae",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-01-23T14:07:58.836786300Z"
+    },
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n"
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the path to the file:  running-example.xes\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\felix\\Desktop\\Uni\\Master Finance and Information Management (FIM)\\WS 23_24\\Master's Thesis\\Elusive_Case_Transformer\\.venv\\lib\\site-packages\\pm4py\\util\\dt_parsing\\parser.py:77: UserWarning: ISO8601 strings are not fully supported with strpfromiso for Python versions below 3.11\n",
+      "/home/jupyter-felix.zetzsche/.local/lib/python3.9/site-packages/pm4py/util/dt_parsing/parser.py:77: UserWarning: ISO8601 strings are not fully supported with strpfromiso for Python versions below 3.11\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
-      "text/plain": "parsing log, completed traces ::   0%|          | 0/6 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c1f918973eb46d0a68287d2eaa5939a",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3142fcc7e3194b698b1b968c2eff5418"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "parsing log, completed traces ::   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -61,7 +81,9 @@
     },
     {
      "data": {
-      "text/plain": "<All keys matched successfully>"
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -80,69 +102,61 @@
     "model_filename = get_weights_file_path(config, f\"19\")\n",
     "state = torch.load(model_filename)\n",
     "model.load_state_dict(state['model_state_dict'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-15T05:57:56.201228100Z",
-     "start_time": "2023-12-15T05:57:52.268572800Z"
-    }
-   },
-   "id": "d92be1715f7873ae"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "3f3db9332edca3bb",
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "    SOURCE: register_request decide decide reinitiate_request examine_thoroughly register_request register_request examine_casually examine_casually check_ticket\n",
-      "    TARGET: 5 3 1 3 3 6 4 6 5 4\n",
-      " PREDICTED: 1 2 1 5 3 1 3 1 3 1\n",
+      "    SOURCE: examine_thoroughly register_request register_request examine_casually examine_casually check_ticket reject_request check_ticket decide check_ticket\n",
+      "    TARGET: 3 6 4 6 5 4 1 6 6 5\n",
+      " PREDICTED: 3 1 2 1 5 3 1 3 1 3\n",
       "--------------------------------------------------------------------------------\n",
-      "    SOURCE: reinitiate_request reject_request check_ticket pay_compensation pay_compensation examine_casually decide reinitiate_request examine_casually check_ticket\n",
-      "    TARGET: 5 4 5 3 6 5 5 5 5 5\n",
-      " PREDICTED: 5 4 5 3 6 5 5 5 5 5\n",
+      "    SOURCE: decide decide decide reinitiate_request reject_request check_ticket pay_compensation pay_compensation examine_casually decide\n",
+      "    TARGET: 3 4 5 5 4 5 3 6 5 5\n",
+      " PREDICTED: 4 5 3 6 5 5 5 5 5 5\n",
       "--------------------------------------------------------------------------------\n",
-      "    SOURCE: check_ticket pay_compensation examine_thoroughly decide decide decide reinitiate_request reject_request check_ticket pay_compensation\n",
-      "    TARGET: 3 2 4 3 4 5 5 4 5 3\n",
-      " PREDICTED: 5 3 6 4 5 4 5 5 5\n"
+      "    SOURCE: examine_casually register_request examine_casually check_ticket examine_thoroughly decide check_ticket register_request decide decide\n",
+      "    TARGET: 2 3 3 3 1 2 1 5 3 1\n",
+      " PREDICTED: 3 1 2 1 5 3 1 3 1 3\n"
      ]
     }
    ],
    "source": [
     "run_validation(model, val_dataloader, tokenizer_src, tokenizer_tgt, config['seq_len'], device, lambda msg: print(msg), 0, None, num_examples=10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-15T05:58:00.895726100Z",
-     "start_time": "2023-12-15T05:57:59.485462200Z"
-    }
-   },
-   "id": "3f3db9332edca3bb"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
