Evaluation metrics modification

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import os\n",
     "import warnings\n",
-    "from typing import Tuple\n",
+    "from typing import Tuple, List, Union\n",
     "\n",
     "import torch\n",
     "import altair as alt\n",
@@ -229,12 +229,15 @@
    },
    "outputs": [],
    "source": [
-    "def matching_proportion(df: pd.DataFrame) -> None:\n",
+    "def matching_proportion(df: pd.DataFrame) -> float:\n",
     "    \"\"\"\n",
     "    Calculate and print the proportion of matching case IDs.\n",
     "\n",
     "    :param df: DataFrame containing case IDs.\n",
+    "    :return: Proportion of matching case IDs.\n",
     "    \"\"\"\n",
+    "    proportion_matching = 0\n",
+    "    \n",
     "    # Check if the DataFrame is not empty before calculating the proportion\n",
     "    if not df.empty:\n",
     "        # Count the number of rows where 'Determined Case ID' and 'Actual Case ID' match\n",
@@ -243,11 +246,44 @@
     "        # Calculate the proportion of matching rows\n",
     "        proportion_matching = len(matching_rows) / len(df)\n",
     "\n",
-    "        print(f\"{len(matching_rows)} of {len(df)} case ID{'s' if len(df) != 1 else ''} \"\n",
+    "        print(f\"In the repaired log, {len(matching_rows)} of {len(df)} case ID{'s' if len(df) != 1 else ''} \"\n",
     "              f\"{'was' if len(matching_rows) == 1 else 'were'} determined correctly. \"\n",
     "              f\"This corresponds to an accuracy of {proportion_matching:.2%}.\")\n",
     "    else:\n",
     "        print(\"DataFrame is empty. Cannot calculate accuracy.\")\n",
+    "    \n",
+    "    return proportion_matching\n",
+    "\n",
+    "\n",
+    "def factual_matching_proportion(df: pd.DataFrame) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate and print the proportion of factually matching case IDs.\n",
+    "    \n",
+    "    :param df: DataFrame containing case IDs.\n",
+    "    :return: Proportion of factually matching case IDs.\n",
+    "    \"\"\"\n",
+    "    proportion_factual_matching = 0\n",
+    "    \n",
+    "    # Check if DataFrame is not empty\n",
+    "    if not df.empty:\n",
+    "        # Obtain list of factually correct case IDs\n",
+    "        correct = correct_case_different_naming(df, False)\n",
+    "        \n",
+    "        # Count the number of rows where the \"Actual Case ID\" matches one of the correct IDs\n",
+    "        matching_rows = df[df['Actual Case ID'].isin(correct)]\n",
+    "        \n",
+    "        # Calculate the proportion of factually matching case IDs\n",
+    "        proportion_factual_matching = len(matching_rows) / len(df)\n",
+    "        \n",
+    "        # Print the result\n",
+    "        print(f\"Furthermore, {len(matching_rows)} of {len(df)} case ID{'s' if len(df) != 1 else ''} \"\n",
+    "              f\"{'was' if len(matching_rows) == 1 else 'were'} determined factually correctly. \"\n",
+    "              f\"This corresponds to a factual accuracy of {proportion_factual_matching:.2%}.\")\n",
+    "    else:\n",
+    "        # Print message if DataFrame is empty\n",
+    "        print(\"DataFrame is empty. Cannot calculate factual accuracy.\")\n",
+    "        \n",
+    "    return proportion_factual_matching\n",
     "\n",
     "\n",
     "def completely_correct_cases(df: pd.DataFrame) -> float:\n",
@@ -296,7 +332,7 @@
     "        num_cases = len(cases)\n",
     "\n",
     "        # Print the number of completely correct cases\n",
-    "        print(f\"Thereby {num_matching} of {num_cases} case{'s' if num_cases != 1 else ''} \"\n",
+    "        print(f\"Thereby, {num_matching} of {num_cases} case{'s' if num_cases != 1 else ''} \"\n",
     "              f\"{'were' if num_matching != 1 else 'was'} determined completely correctly.\", end=' ')\n",
     "\n",
     "        # Print the list of completely correct cases (using \"and\" before the last value)\n",
@@ -319,16 +355,19 @@
     "    return proportion_completely_correct\n",
     "\n",
     "\n",
-    "def correct_case_different_naming(df: pd.DataFrame) -> float:\n",
+    "def correct_case_different_naming(df: pd.DataFrame, calculation: bool = True) -> Union[List[str], float]:\n",
     "    \"\"\"\n",
     "    Calculate and print the proportion of factually completely correct case IDs.\n",
     "\n",
     "    A factually completely correct case ID is one where the determined case ID is different from the actual case ID, yet\n",
     "    uniquely maps back to the same actual case ID.\n",
     "\n",
-    "    :param df: DataFrame with 'Actual Case ID' and 'Determined Case ID' columns, representing actual and\n",
-    "    determined case IDs.\n",
-    "    :return: Proportion of factually completely correct case IDs.\n",
+    "    :param df: DataFrame with 'Actual Case ID' and 'Determined Case ID' columns, representing actual and determined \n",
+    "    case IDs.\n",
+    "    :param calculation: If True, calculate the proportion of factually completely correct case IDs. If False, return \n",
+    "    the list of factually completely correct case IDs.\n",
+    "    :return: Proportion of factually completely correct case IDs if calculation is True, otherwise return the list of \n",
+    "    factually completely correct case IDs.\n",
     "    \"\"\"\n",
     "    proportion_correct_different_naming = 0\n",
     "\n",
@@ -371,6 +410,10 @@
     "            if condition_3:\n",
     "                correct_cases.append(case_id)\n",
     "                corresponding_values.append(unique_value)\n",
+    "        \n",
+    "        # If calculation is False, return the list of factually completely correct case IDs\n",
+    "        if not calculation:\n",
+    "            return correct_cases\n",
     "\n",
     "        # Print the number of cases correctly determined factually with different naming\n",
     "        print(f\"Moreover, {len(correct_cases)} of {len(cases)} case{'s' if len(cases) != 1 else ''} \"\n",
@@ -410,7 +453,13 @@
     "    :param df: DataFrame containing determined log.\n",
     "    \"\"\"\n",
     "    # Calculate and print the proportion of matching cases\n",
-    "    matching_proportion(df)\n",
+    "    matching = matching_proportion(df)\n",
+    "    \n",
+    "    # Calculate and print the proportion of factually matching cases\n",
+    "    factual_matching = factual_matching_proportion(df)\n",
+    "    \n",
+    "    # Print the overall accuracy\n",
+    "    print(f\"Thus, the overall accuracy is {(matching + factual_matching):.2%}.\")\n",
     "\n",
     "    # Calculate the proportion of completely correct cases\n",
     "    correct_proportion = completely_correct_cases(df)\n",
