--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -19,10 +19,7 @@
      "end_time": "2024-02-13T11:28:01.407303100Z",
      "start_time": "2024-02-13T11:27:53.064075800Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -36,7 +33,7 @@
     "import pandas as pd\n",
     "\n",
     "from config import get_config, get_weights_file_path, reset_log, set_tf_input\n",
-    "from train import get_model, get_ds, greedy_decode, create_log\n",
+    "from train import get_model, get_ds, greedy_decode\n",
     "\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")  # Ignore warnings\n"
@@ -51,10 +48,7 @@
      "end_time": "2024-02-13T11:28:02.617886800Z",
      "start_time": "2024-02-13T11:28:02.570933400Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -80,10 +74,7 @@
      "end_time": "2024-02-13T11:28:04.247934600Z",
      "start_time": "2024-02-13T11:28:04.210848700Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -107,7 +98,7 @@
     "    # check that the batch size is 1\n",
     "    assert encoder_input.size(0) == 1, \"Batch size must be 1 for validation\"\n",
     "\n",
-    "    model_out = greedy_decode(model, encoder_input, encoder_mask, vocab_src, vocab_tgt, config['seq_len'], device)\n",
+    "    model_out, _ = greedy_decode(model, encoder_input, encoder_mask, vocab_src, vocab_tgt, config['seq_len'], device)\n",
     "    \n",
     "    return batch, encoder_input_tokens, decoder_input_tokens\n"
    ]
@@ -121,10 +112,7 @@
      "end_time": "2024-02-13T11:28:05.060921Z",
      "start_time": "2024-02-13T11:28:05.022205200Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -239,10 +227,7 @@
      "end_time": "2024-02-13T11:28:05.864843200Z",
      "start_time": "2024-02-13T11:28:05.833634800Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -520,10 +505,7 @@
      "end_time": "2024-02-12T17:37:55.306660300Z",
      "start_time": "2024-02-12T17:37:43.216024700Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -605,10 +587,7 @@
      "end_time": "2024-02-12T17:37:58.506774100Z",
      "start_time": "2024-02-12T17:37:57.244166100Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -640,10 +619,7 @@
      "end_time": "2024-02-12T17:38:06.816659800Z",
      "start_time": "2024-02-12T17:37:59.129063400Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -739,10 +715,7 @@
      "end_time": "2024-02-12T17:38:09.710750300Z",
      "start_time": "2024-02-12T17:38:06.812171700Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -838,10 +811,7 @@
      "end_time": "2024-02-12T17:38:12.723793300Z",
      "start_time": "2024-02-12T17:38:09.697596800Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -938,10 +908,7 @@
      "end_time": "2024-02-12T17:38:18.745281800Z",
      "start_time": "2024-02-12T17:38:12.717776300Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1019,10 +986,7 @@
      "end_time": "2024-02-08T14:29:58.308210400Z",
      "start_time": "2024-02-08T14:28:17.985950500Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1104,10 +1068,7 @@
      "end_time": "2024-02-08T14:31:11.688968900Z",
      "start_time": "2024-02-08T14:31:10.272951900Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1139,10 +1100,7 @@
      "end_time": "2024-02-08T14:31:17.602386300Z",
      "start_time": "2024-02-08T14:31:13.176414700Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1238,10 +1196,7 @@
      "end_time": "2024-02-08T14:31:23.601275600Z",
      "start_time": "2024-02-08T14:31:17.590963300Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1337,10 +1292,7 @@
      "end_time": "2024-02-08T14:31:26.856556800Z",
      "start_time": "2024-02-08T14:31:23.600155100Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1436,10 +1388,7 @@
     "ExecuteTime": {
      "start_time": "2024-02-08T14:31:32.412455800Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1527,10 +1476,7 @@
      "end_time": "2024-02-13T11:28:32.971670Z",
      "start_time": "2024-02-13T11:28:26.100324600Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1613,10 +1559,7 @@
      "end_time": "2024-02-13T11:28:39.400287400Z",
      "start_time": "2024-02-13T11:28:38.906816900Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1648,10 +1591,7 @@
      "end_time": "2024-02-13T11:28:43.954484Z",
      "start_time": "2024-02-13T11:28:40.448856500Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1747,10 +1687,7 @@
      "end_time": "2024-02-13T11:28:47.558116600Z",
      "start_time": "2024-02-13T11:28:43.950107Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1846,10 +1783,7 @@
      "end_time": "2024-02-13T11:29:23.192395500Z",
      "start_time": "2024-02-13T11:29:20.521121900Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1946,10 +1880,7 @@
      "end_time": "2024-02-13T11:29:32.638966800Z",
      "start_time": "2024-02-13T11:29:25.594823500Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2023,10 +1954,7 @@
    "execution_count": 24,
    "id": "59dcc6eb65853d9f",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2105,10 +2033,7 @@
    "execution_count": 25,
    "id": "b315b7d998e85114",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2136,10 +2061,7 @@
    "execution_count": 26,
    "id": "38807853d89802bf",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2231,10 +2153,7 @@
    "execution_count": 27,
    "id": "ee6af980e3001f07",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2326,10 +2245,7 @@
    "execution_count": 28,
    "id": "1dae703f07074fcb",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2422,10 +2338,7 @@
    "execution_count": 29,
    "id": "a958e446b22373b4",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
