--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import os\n",
     "import warnings\n",
-    "from typing import Tuple, List, Union\n",
+    "from typing import List, Tuple, Union\n",
     "\n",
     "import torch\n",
     "import altair as alt\n",
@@ -33,7 +33,7 @@
     "import pandas as pd\n",
     "\n",
     "from config import get_config, get_weights_file_path, reset_log, set_tf_input\n",
-    "from train import get_model, get_ds, greedy_decode\n",
+    "from train import get_ds, get_model, greedy_decode\n",
     "\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")  # Ignore warnings\n"
