Extension with continuous input attributes

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -32,7 +32,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from config import get_config, get_weights_file_path, reset_log, set_tf_input\n",
+    "from config import get_config, get_expert_input_columns, get_weights_file_path, reset_log, set_tf_input\n",
     "from train import get_ds, get_model, greedy_decode\n",
     "\n",
     "\n",
@@ -83,14 +83,15 @@
     "    Load a sample batch from the validation set and return relevant tensors and tokens.\n",
     "    \n",
     "    :return: A dictionary containing encoder and decoder input tensors; List of tokens for the encoder input; \n",
-    "    List of tokens for the decoder input.\n",
+    "     List of tokens for the decoder input.\n",
     "    \"\"\"\n",
     "    # Load a sample batch from the validation set\n",
     "    batch = next(iter(val_dataloader))\n",
     "    encoder_input = batch[\"encoder_input\"].to(device)\n",
     "    encoder_mask = batch[\"encoder_mask\"].to(device)\n",
+    "    continuous_input = batch[\"continuous_input\"].to(device)\n",
+    "    continuous_mask = batch[\"continuous_mask\"].to(device)\n",
     "    decoder_input = batch[\"decoder_input\"].to(device)\n",
-    "    decoder_mask = batch[\"decoder_mask\"].to(device)\n",
     "\n",
     "    encoder_input_tokens = [vocab_src.id_to_token(idx) for idx in encoder_input[0].cpu().numpy()]\n",
     "    decoder_input_tokens = [vocab_tgt.id_to_token(idx) for idx in decoder_input[0].cpu().numpy()]\n",
@@ -98,7 +99,17 @@
     "    # check that the batch size is 1\n",
     "    assert encoder_input.size(0) == 1, \"Batch size must be 1 for validation\"\n",
     "\n",
-    "    model_out, _ = greedy_decode(model, encoder_input, encoder_mask, vocab_src, vocab_tgt, config['seq_len'], device)\n",
+    "    model_out, _ = greedy_decode(\n",
+    "        model,\n",
+    "        encoder_input,\n",
+    "        encoder_mask,\n",
+    "        continuous_input,\n",
+    "        continuous_mask,\n",
+    "        vocab_tgt,\n",
+    "        config['seq_len'],\n",
+    "        device,\n",
+    "        config\n",
+    "    )\n",
     "    \n",
     "    return batch, encoder_input_tokens, decoder_input_tokens\n"
    ]
@@ -116,13 +127,13 @@
    },
    "outputs": [],
    "source": [
-    "def mtx2df(m: np.ndarray, max_row: int, max_col: int, row_tokens: list, col_tokens: list) -> pd.DataFrame:\n",
+    "def mtx2df(m: np.ndarray, max_y: int, max_x: int, row_tokens: list, col_tokens: list) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Convert a matrix to a pandas DataFrame.\n",
     "    \n",
     "    :param m: Input matrix.\n",
-    "    :param max_row: Maximum number of rows to include in the DataFrame.\n",
-    "    :param max_col: Maximum number of columns to include in the DataFrame.\n",
+    "    :param max_y: Maximum number of rows to include in the DataFrame.\n",
+    "    :param max_x: Maximum number of columns to include in the DataFrame.\n",
     "    :param row_tokens: List of row tokens.\n",
     "    :param col_tokens: List of column tokens.\n",
     "    :return: DataFrame representation of the input matrix.\n",
@@ -138,7 +149,7 @@
     "            )\n",
     "            for r in range(m.shape[0])\n",
     "            for c in range(m.shape[1])\n",
-    "            if r < max_row and c < max_col\n",
+    "            if r < max_y and c < max_x\n",
     "        ],\n",
     "        columns=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"],\n",
     "    )\n",
@@ -162,7 +173,8 @@
     "    return attn[0, head].data\n",
     "\n",
     "\n",
-    "def attn_map(attn_type: str, layer: int, head: int, row_tokens: list, col_tokens: list, max_sentence_len: int) -> alt.Chart:\n",
+    "def attn_map(attn_type: str, layer: int, head: int, row_tokens: list, col_tokens: list, max_sequence_len_x: int, \n",
+    "             max_sequence_len_y: int) -> alt.Chart:\n",
     "    \"\"\"\n",
     "    Create an attention map for a specific type, layer, and head.\n",
     "    \n",
@@ -171,13 +183,14 @@
     "    :param head: Head index.\n",
     "    :param row_tokens: List of row tokens.\n",
     "    :param col_tokens: List of column tokens.\n",
-    "    :param max_sentence_len: Maximum length of the sentence.\n",
+    "    :param max_sequence_len_x: Maximum length of the output sequence.\n",
+    "    :param max_sequence_len_y: Maximum length of the input sequence.\n",
     "    :return: Altair chart object representing the attention map.\n",
     "    \"\"\"\n",
     "    df = mtx2df(\n",
     "        get_attn_map(attn_type, layer, head),\n",
-    "        max_sentence_len,\n",
-    "        max_sentence_len,\n",
+    "        max_sequence_len_y,\n",
+    "        max_sequence_len_x,\n",
     "        row_tokens,\n",
     "        col_tokens,\n",
     "    )\n",
@@ -197,7 +210,7 @@
     "\n",
     "\n",
     "def get_all_attention_maps(attn_type: str, layers: list, heads: list, row_tokens: list, col_tokens: list, \n",
-    "                           max_sentence_len: int) -> alt.ConcatChart:\n",
+    "                           max_sequence_len_x: int, max_sequence_len_y: int) -> alt.ConcatChart:\n",
     "    \"\"\"\n",
     "    Get all attention maps for specified types, layers, and heads.\n",
     "    \n",
@@ -206,14 +219,15 @@
     "    :param heads: List of head indices.\n",
     "    :param row_tokens: List of row tokens.\n",
     "    :param col_tokens: List of column tokens.\n",
-    "    :param max_sentence_len: Maximum length of the sentence.\n",
+    "    :param max_sequence_len_x: Maximum length of the output sequence.\n",
+    "    :param max_sequence_len_y: Maximum length of the input sequence.\n",
     "    :return: Concatenated Altair chart object representing all attention maps\n",
     "    \"\"\"\n",
     "    charts = []\n",
     "    for layer in layers:\n",
     "        rowCharts = []\n",
     "        for head in heads:\n",
-    "            rowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len))\n",
+    "            rowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sequence_len_x, max_sequence_len_y))\n",
     "        charts.append(alt.hconcat(*rowCharts))\n",
     "    return alt.vconcat(*charts)\n"
    ]
@@ -296,7 +310,7 @@
     "    for all rows where it appears, and vice versa.\n",
     "\n",
     "    :param df: DataFrame with 'Actual Case ID' and 'Determined Case ID' columns, representing actual and \n",
-    "    determined case IDs.\n",
+    "     determined case IDs.\n",
     "    :return: Proportion of completely correct case IDs.\n",
     "    \"\"\"\n",
     "    proportion_completely_correct = 0\n",
@@ -365,11 +379,11 @@
     "    uniquely maps back to the same actual case ID.\n",
     "\n",
     "    :param df: DataFrame with 'Actual Case ID' and 'Determined Case ID' columns, representing actual and determined \n",
-    "    case IDs.\n",
+    "     case IDs.\n",
     "    :param calculation: If True, calculate the proportion of factually completely correct case IDs. If False, return \n",
-    "    the list of factually completely correct case IDs.\n",
+    "     the list of factually completely correct case IDs.\n",
     "    :return: Proportion of factually completely correct case IDs if calculation is True, otherwise return the list of \n",
-    "    factually completely correct case IDs.\n",
+    "     factually completely correct case IDs.\n",
     "    \"\"\"\n",
     "    proportion_correct_different_naming = 0\n",
     "\n",
@@ -602,10 +616,18 @@
    "source": [
     "# Load next batch from validation set and print source and target texts\n",
     "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
-    "print(f'Source: {batch[\"src_text\"][0]}')\n",
+    "src_text = batch[\"src_text\"][0]\n",
+    "if config['continuous_input_attributes']:\n",
+    "    src_text = src_text + \" \" + batch[\"continuous_data\"][0]\n",
+    "print(f'Source: {src_text}')\n",
     "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
     "\n",
-    "sentence_len = 10  # Length of the sentence\n",
+    "expert_input_columns = get_expert_input_columns()\n",
+    "input_sequence_len = ((config['seq_len'] - 2) * \n",
+    "                      (len(config['discrete_input_attributes']) + \n",
+    "                       len(expert_input_columns)) + \n",
+    "                      2)\n",
+    "output_sequence_len = config['seq_len']\n",
     "layers = [0, 1, 2]  # Layers for attention maps\n",
     "heads = [0, 1, 2, 3, 4, 5, 6, 7]  # Heads for attention maps\n"
    ]
@@ -703,7 +725,8 @@
    ],
    "source": [
     "# Display attention maps for encoder self-attention\n",
-    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, \n",
+    "                       min(20, input_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -799,7 +822,8 @@
    ],
    "source": [
     "# Display attention maps for decoder self-attention\n",
-    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, \n",
+    "                       min(20, output_sequence_len), min(20, output_sequence_len))\n"
    ]
   },
   {
@@ -896,7 +920,7 @@
    "source": [
     "# Display attention maps for cross-attention\n",
     "get_all_attention_maps(\"encoder-decoder\", layers, heads, encoder_input_tokens, decoder_input_tokens, \n",
-    "                       min(20, sentence_len))\n"
+    "                       min(20, output_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -1083,10 +1107,18 @@
    "source": [
     "# Load next batch from validation set and print source and target texts\n",
     "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
-    "print(f'Source: {batch[\"src_text\"][0]}')\n",
+    "src_text = batch[\"src_text\"][0]\n",
+    "if config['continuous_input_attributes']:\n",
+    "    src_text = src_text + \" \" + batch[\"continuous_data\"][0]\n",
+    "print(f'Source: {src_text}')\n",
     "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
     "\n",
-    "sentence_len = 10  # Length of the sentence\n",
+    "expert_input_columns = get_expert_input_columns()\n",
+    "input_sequence_len = ((config['seq_len'] - 2) * \n",
+    "                      (len(config['discrete_input_attributes']) + \n",
+    "                       len(expert_input_columns)) + \n",
+    "                      2)\n",
+    "output_sequence_len = config['seq_len']\n",
     "layers = [0, 1, 2]  # Layers for attention maps\n",
     "heads = [0, 1, 2, 3, 4, 5, 6, 7]  # Heads for attention maps\n"
    ]
@@ -1184,7 +1216,8 @@
    ],
    "source": [
     "# Display attention maps for encoder self-attention\n",
-    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, \n",
+    "                       min(20, input_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -1280,7 +1313,8 @@
    ],
    "source": [
     "# Display attention maps for decoder self-attention\n",
-    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, \n",
+    "                       min(20, output_sequence_len), min(20, output_sequence_len))\n"
    ]
   },
   {
@@ -1377,7 +1411,7 @@
    "source": [
     "# Display attention maps for cross-attention\n",
     "get_all_attention_maps(\"encoder-decoder\", layers, heads, encoder_input_tokens, decoder_input_tokens, \n",
-    "                       min(20, sentence_len))\n"
+    "                       min(20, output_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -1574,10 +1608,18 @@
    "source": [
     "# Load next batch from validation set and print source and target texts\n",
     "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
-    "print(f'Source: {batch[\"src_text\"][0]}')\n",
+    "src_text = batch[\"src_text\"][0]\n",
+    "if config['continuous_input_attributes']:\n",
+    "    src_text = src_text + \" \" + batch[\"continuous_data\"][0]\n",
+    "print(f'Source: {src_text}')\n",
     "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
     "\n",
-    "sentence_len = 10  # Length of the sentence\n",
+    "expert_input_columns = get_expert_input_columns()\n",
+    "input_sequence_len = ((config['seq_len'] - 2) * \n",
+    "                      (len(config['discrete_input_attributes']) + \n",
+    "                       len(expert_input_columns)) + \n",
+    "                      2)\n",
+    "output_sequence_len = config['seq_len']\n",
     "layers = [0, 1, 2]  # Layers for attention maps\n",
     "heads = [0, 1, 2, 3, 4, 5, 6, 7]  # Heads for attention maps\n"
    ]
@@ -1675,7 +1717,8 @@
    ],
    "source": [
     "# Display attention maps for encoder self-attention\n",
-    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, \n",
+    "                       min(20, input_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -1771,7 +1814,8 @@
    ],
    "source": [
     "# Display attention maps for decoder self-attention\n",
-    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, \n",
+    "                       min(20, output_sequence_len), min(20, output_sequence_len))\n"
    ]
   },
   {
@@ -1868,7 +1912,7 @@
    "source": [
     "# Display attention maps for cross-attention\n",
     "get_all_attention_maps(\"encoder-decoder\", layers, heads, encoder_input_tokens, decoder_input_tokens, \n",
-    "                       min(20, sentence_len))\n"
+    "                       min(20, output_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -2048,10 +2092,18 @@
    "source": [
     "# Load next batch from validation set and print source and target texts\n",
     "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
-    "print(f'Source: {batch[\"src_text\"][0]}')\n",
+    "src_text = batch[\"src_text\"][0]\n",
+    "if config['continuous_input_attributes']:\n",
+    "    src_text = src_text + \" \" + batch[\"continuous_data\"][0]\n",
+    "print(f'Source: {src_text}')\n",
     "print(f'Target: {batch[\"tgt_text\"][0]}')\n",
     "\n",
-    "sentence_len = 10  # Length of the sentence\n",
+    "expert_input_columns = get_expert_input_columns()\n",
+    "input_sequence_len = ((config['seq_len'] - 2) * \n",
+    "                      (len(config['discrete_input_attributes']) + \n",
+    "                       len(expert_input_columns)) + \n",
+    "                      2)\n",
+    "output_sequence_len = config['seq_len']\n",
     "layers = [0, 1, 2]  # Layers for attention maps\n",
     "heads = [0, 1, 2, 3, 4, 5, 6, 7]  # Heads for attention maps\n"
    ]
@@ -2145,7 +2197,8 @@
    ],
    "source": [
     "# Display attention maps for encoder self-attention\n",
-    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, \n",
+    "                       min(20, input_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
@@ -2237,7 +2290,8 @@
    ],
    "source": [
     "# Display attention maps for decoder self-attention\n",
-    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))\n"
+    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, \n",
+    "                       min(20, output_sequence_len), min(20, output_sequence_len))\n"
    ]
   },
   {
@@ -2330,7 +2384,7 @@
    "source": [
     "# Display attention maps for cross-attention\n",
     "get_all_attention_maps(\"encoder-decoder\", layers, heads, encoder_input_tokens, decoder_input_tokens, \n",
-    "                       min(20, sentence_len))\n"
+    "                       min(20, output_sequence_len), min(20, input_sequence_len))\n"
    ]
   },
   {
